src/plugins/multimedia/windows/player/mfplayersession.cpp
@@ -77,7 +77,7 @@ MFPlayerSession::MFPlayerSession(MFPlayerControl *playerControl)
     m_request.rate = 1.0f;
 
     m_audioSampleGrabber = new AudioSampleGrabberCallback;
-    m_videoRendererControl = new MFVideoRendererControl;
+    m_videoRendererControl = new MFVideoRendererControl(this);
 }
 
 void MFPlayerSession::timeout()
@@ -1515,8 +1515,13 @@ ULONG MFPlayerSession::AddRef(void)
 ULONG MFPlayerSession::Release(void)
 {
     LONG cRef = InterlockedDecrement(&m_cRef);
-    if (cRef == 0)
-        this->deleteLater();
+    if (cRef == 0) {
+        deleteLater();
+
+        // In rare cases the session has queued events to be run between deleteLater and deleting,
+        // so we set the parent control to nullptr in order to prevent crashes in the cases.
+        m_playerControl = nullptr;
+    }
     return cRef;
 }
 
